--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -1,7 +1,8 @@
 name: build-and-push
 
 on:
-  workflow_call:
+  push: {}
+  workflow_dispatch:
     inputs:
       root:
         description: 'root directory to look for Dockerfiles'
