--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -51,6 +51,12 @@ jobs:
       matrix:
         include: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
 
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -75,8 +81,16 @@ jobs:
                 type=semver,pattern=v{{major}}.{{minor}}
                 type=semver,pattern=v{{major}}
 
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        id: build_and_push
+        uses: docker/build-push-action@v6
         with:
             context: ${{ matrix.dir }}
             file: ${{ matrix.dir }}/Dockerfile
